# OpenCV-People-Counter-c-

./: CMakeLists.txt  PeopleCounter.cpp  README.md  README.org
